--- a/frontend/src/pages/ProductPage.css
+++ b/frontend/src/pages/ProductPage.css
@@ -71,12 +71,22 @@
   transition: background 0.2s;
 }
 
-.product-page button:hover {
-  background: #225ea8;
+.modal-buttons button:last-child {
+  background-color: #3182ce;
+  color: white;
 }
 
-.product-page button:last-child {
-  margin-right: 0;
+.modal-buttons button:last-child:hover {
+  background-color: #225ea8;
+}
+
+.modal-buttons button:first-child {
+  background-color: #e53e3e;
+  color: white;
+}
+
+.modal-buttons button:first-child:hover {
+  background-color: #c53030;
 }
 
 @media (max-width: 700px) {
